--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,225 +3,298 @@
 --------------------------------------------------------------*/
 
 a {
-  color: inherit;
+    color: inherit;
+}
+
+/* ------------ Border Styles ------------ */
+
+.bt-1 {
+    border-top: 1px solid #fff;
 }
 
 .link {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .text-center {
-  text-align: center;
+    text-align: center;
 }
 
 .uppercase {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .overflow {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 /* ------------ Font Styles ------------ */
 
 .f-18 {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 .f-500 {
-  font-weight: 500;
+    font-weight: 500;
 }
 
 /* ------------ Grid Styles ------------ */
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 /* ------------ Flex Styles ------------ */
 
 .flex {
-  display: flex;
+    display: flex;
 }
 
 .flex-wrap {
-  flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .flex-col {
-  flex-direction: column;
+    flex-direction: column;
 }
 
 .align-center {
-  align-items: center;
+    align-items: center;
 }
 
 .justify-center {
-  justify-content: center;
+    justify-content: center;
 }
 
 .space-between {
-  justify-content: space-between;
+    justify-content: space-between;
 }
 
 /* ------------ Gap Styles ------------ */
 
+.gap-5 {
+    gap: 5px;
+}
+
+.gap-10 {
+    gap: 10px;
+}
+
 .gap-20 {
-  gap: 20px;
+    gap: 20px;
 }
 
 .gap-40 {
-  gap: 40px;
+    gap: 40px;
 }
 
 /* ------------ Margin Styles ------------ */
 
 .m0 {
-  margin: 0px;
+    margin: 0px;
 }
 
 .ma {
-  margin: auto;
+    margin: auto;
 }
 
 .mla {
-  margin-left: auto;
+    margin-left: auto;
 }
 
 .mra {
-  margin-right: auto;
+    margin-right: auto;
 }
 
 .mta {
-  margin-top: auto;
+    margin-top: auto;
 }
 
 .mba {
-  margin-bottom: auto;
+    margin-bottom: auto;
+}
+
+.mt10 {
+    margin-top: 10px;
 }
 
 .ml60 {
-  margin-left: 60px;
+    margin-left: 60px;
+}
+
+.mb-40 {
+    margin-bottom: 40px;
 }
 
 /* ------------ Padding Styles ------------ */
 
 .p0 {
-  padding: 0px;
+    padding: 0px;
 }
 
 .p20 {
-  padding: 20px;
+    padding: 20px;
+}
+
+.p10 {
+    padding: 10px;
 }
 
 .p40 {
-  padding: 40px;
+    padding: 40px;
 }
 
 /* ------------ Position Styles ------------ */
 
 .pos-rel {
-  position: relative;
+    position: relative;
 }
 
 .sticky {
-  position: sticky;
-  top: 0;
+    position: sticky;
+    top: 0;
 }
 
 /* ------------ Z-Index Styles ------------ */
 
 .z-2 {
-  z-index: 2;
+    z-index: 2;
 }
 
 /* ------------ BG Styles ------------ */
 
+.bg-black {
+    background-color: #000;
+}
+
 .bg-grey {
-  background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* ------------ Image Styles ------------ */
 
 div.bg-image,
 .bg-image {
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+}
+
+.bg-fixed {
+    inset: 0px;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    object-fit: cover;
 }
 
 /* ------------ Spacer Styles ------------ */
 
 .spacer {
-  height: 100px;
+    height: 100px;
 }
 
 /* ------------ Ratio Styles ------------ */
 
 .ratio-1-2 {
-  width: 100%;
-  aspect-ratio: 1 / 2;
+    width: 100%;
+    aspect-ratio: 1 / 2;
+}
+
+.ratio-1-1 {
+    width: 100%;
+    aspect-ratio: 1 / 1;
 }
 
 .ratio-2-1 {
-  width: 100%;
-  aspect-ratio: 2 / 1;
+    width: 100%;
+    aspect-ratio: 2 / 1;
+}
+
+.ratio-4-3 {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+}
+
+.ratio-4-5 {
+    width: 100%;
+    aspect-ratio: 4 / 5;
+}
+
+.ratio-16-9 {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+}
+
+.ratio-16-10 {
+    width: 100%;
+    aspect-ratio: 16 / 10;
 }
 
 /* ------------ Width Styles ------------ */
 
 .w-50 {
-  width: 50%;
+    width: 50%;
 }
 
 .w-100 {
-  width: 100%;
+    width: 100%;
 }
 
 /* ------------ Height Styles ------------ */
 
 .h-100 {
-  height: 100%;
+    height: 100%;
 }
 
 .h-100vh {
-  height: 100vh;
+    height: 100vh;
 }
 
 /* ------------ Max Styles ------------ */
 
+.max-300 {
+    max-width: 300px;
+}
+
 .max-1600 {
-  max-width: 1600px;
+    max-width: 1600px;
+}
+
+/* ------------ Opacity Styles ------------ */
+
+.op-50 {
+    opacity: 0.5;
 }
 
 /* ------------ Mobile Styles ------------ */
 
 .m-hide {
-  @media (max-width: 768px) {
-    display: none;
-  }
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 
 .m-show {
-  display: none;
-  @media (max-width: 768px) {
-    display: inherit;
-  }
+    display: none;
+    @media (max-width: 768px) {
+        display: inherit;
+    }
 }
 
 .m-wrap {
-  @media (max-width: 768px) {
-    flex-wrap: wrap;
-  }
+    @media (max-width: 768px) {
+        flex-wrap: wrap;
+    }
 }
 
 .m-100 {
-  @media (max-width: 768px) {
-    width: 100%;
-  }
+    @media (max-width: 768px) {
+        width: 100%;
+    }
 }
