--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -47,6 +47,9 @@
     letter-spacing: -0.01em;
 }
 
+.gerstner{
+    font-family: "Gerstner Programm FSL";
+}
 body {
     color: #fff;
     font-size: 15px;
