--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -276,6 +276,11 @@ div.bg-image,
     aspect-ratio: 2 / 1;
 }
 
+.ratio-3-2 {
+    width: 100%;
+    aspect-ratio: 3 / 2;
+}
+
 .ratio-4-3 {
     width: 100%;
     aspect-ratio: 4 / 3;
