--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -29,17 +29,23 @@
 }
 
 .h0 {
-    font-size: 42px;
-    line-height: 1;
-    font-family: "Suisse Works", serif;
-    font-weight: 400;
+  font-size: 42px;
+  line-height: 1;
+  font-family: "Suisse Works", serif;
+  font-weight: 400;
+  @media (max-width: 768px) {
+    font-size: 34px;
+  }
 }
 
 .h1 {
-    font-size: 42px;
-    line-height: 1;
-    font-family: "Suisse Works", serif;
-    font-weight: 400;
+  font-size: 42px;
+  line-height: 1;
+  font-family: "Suisse Works", serif;
+  font-weight: 400;
+  @media (max-width: 768px) {
+    font-size: 34px;
+  }
 }
 
 .h2 {
@@ -50,20 +56,29 @@
 }
 
 .text-lg {
-    font-size: 18px;
-    font-family: "Gerstner Programm FSL";
-    line-height: 1;
-    font-weight: 500;
-    letter-spacing: -0.01em;
+  font-size: 18px;
+  letter-spacing: -0.01em;
+  font-family: "Gerstner Programm FSL";
+  font-weight: 500;
+  line-height: 1;   
 }
 
-.gerstner{
-    font-family: "Gerstner Programm FSL";
+.gerstner {
+  font-family: "Gerstner Programm FSL";
 }
+
+.f-20 {
+  font-size: 20px;
+}
+
+.f-15 {
+  font-size: 15px;
+}
+
 body {
     color: #fff;
     font-size: 15px;
-    line-height: 1.2;
+    line-height: 1.3;
     background: #000;
     font-family: "Suisse Works", serif;
     -webkit-font-smoothing: antialiased;
