--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -29,8 +29,8 @@
 }
 
 .h0 {
-  font-size: 42px;
   line-height: 1;
+  font-size: 42px;
   font-family: "Suisse Works", serif;
   font-weight: 400;
   @media (max-width: 768px) {
@@ -39,8 +39,8 @@
 }
 
 .h1 {
-  font-size: 42px;
   line-height: 1;
+  font-size: 42px;
   font-family: "Suisse Works", serif;
   font-weight: 400;
   @media (max-width: 768px) {
@@ -60,7 +60,10 @@
   letter-spacing: -0.01em;
   font-family: "Gerstner Programm FSL";
   font-weight: 500;
-  line-height: 1;   
+  line-height: 1;
+  @media (max-width: 768px) {
+    font-size: 15px;
+  }   
 }
 
 .gerstner {
