--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -53,4 +53,7 @@
 .embla__slide {
     flex: 0 0 auto;
     width: calc(25% - 4px);
+    @media (max-width: 768px) {
+        width: calc(50% - 4px);
+    }
 }
