--- a/src/scss/_animate.scss
+++ b/src/scss/_animate.scss
@@ -55,34 +55,64 @@
     }
 }
 
+/* ------------ Filter Styles ------------ */
+
+.filter {
+    transition: opacity 0.3s ease;
+    &:hover {
+        opacity: 1;
+    }
+}
+
 /* ------------ Page Transition ------------ */
 
 .page--transition {
-  opacity: 0;
-  will-change: opacity;
-  z-index: 9999;
-  &.fade--out {
-    animation: fadeOut 0.25s ease forwards;
-  }
-  &.fade--in {
-    animation: fadeIn 0.4s ease forwards 0.5s;
-  }
+    opacity: 0;
+    will-change: opacity;
+    z-index: 9999;
+    &.fade--out {
+        animation: fadeOut 0.25s ease forwards;
+    }
+    &.fade--in {
+        animation: fadeIn 0.4s ease forwards 0.5s;
+    }
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+/* ------------ Footer Icon ------------ */
+
+.footer-icon {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+}
+
+.spin {
+    animation: spin 10s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
