--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -3,20 +3,24 @@
 --------------------------------------------------------------*/
 
 .journal-title {
-    gap: 15px;
+    gap: 10px;
     display: flex;
+    flex-direction: column;
     cursor: pointer;
-    align-items: baseline;
+    position: relative;
     transition: opacity 0.5s ease;
     &::before {
         content: "";
         width: 10px;
         height: 10px;
-        min-width: 10px;
         border-radius: 50%;
         transition: opacity 0.3s ease;
         background: #fff;
         opacity: 0;
+        position: absolute;
+        left: -25px;
+        top: 100%;
+        transform: translateY(-16px);
     }
     &.active::before {
         opacity: 1;
