--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -38,9 +38,13 @@
 .cursor-image {
     position: fixed;
     pointer-events: none;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.3s ease;
     width: 300px;
     z-index: 10;
+    opacity: 0;
+    &.active {
+        opacity: 1;
+    }
 }
 
 /* ------------ Embla Styles ------------ */
