--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -314,6 +314,12 @@ a {
 }
 
 .bg-light {
+    .bg-grey {
+        background-color: rgba(0,0,0,.1);
+    }
+}
+
+.bg-light {
     background-color: #F2F2F2;
 }
 
