Change to preloader

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -530,6 +530,12 @@ div.bg-image,
     }
 }
 
+.m-gap-5 {
+    @media (max-width: 768px) {
+        gap:5px;
+    }
+}
+
 .m-gap-40 {
     @media (max-width: 768px) {
         gap: 40px;
