--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -334,12 +334,11 @@ a {
 
 /* ------------ Image Styles ------------ */
 
-div.bg-image,
-.bg-image {
+div.bg-image, .bg-image {
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 100%;
+    height: 101%;
     position: absolute;
     object-fit: cover;
 }
