--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -12,33 +12,16 @@
     top: 0px;
 }
 
-.masthead-menu-trigger, .masthead-mobile-nav {
-    display: none;
+.masthead-seek, .masthead-menu-trigger {
+    transition: opacity 0.25s ease;
+}
+
+.nav-links {
+    transition: opacity 0.55s ease;
 }
 
 @media (max-width: 768px) {
-    .masthead-title {
-        display: none;
-    }
-
-    .masthead-desktop-links {
-        display: none;
-    }
-
-    .masthead--preloading .masthead-desktop-links {
-        display: flex;
-    }
-
-    .masthead--preloading .masthead-left {
-        gap: 0;
-    }
-
-    .masthead--preloading .masthead-desktop-links {
-        margin-left: 0;
-    }
-
     .masthead-menu-trigger {
-        display: block;
         position: absolute;
         background: transparent;
         color: inherit;
@@ -52,20 +35,23 @@
         top: 10px;
         left: 10px;
         right: 10px;
-        display: flex;
         position: absolute;
         align-items: center;
         justify-content: space-between;
         pointer-events: none;
         opacity: 0;
+        transition: opacity 0.35s ease;
     }
 
     .masthead-mobile-nav.active {
+        opacity: 1;
         pointer-events: auto;
     }
 
-    .masthead-mobile-links {
-        gap: 20px;
+    .masthead--menu-open .masthead-seek,
+    .masthead--menu-open .masthead-menu-trigger {
+        opacity: 0;
+        pointer-events: none;
     }
 
     .masthead-mobile-close {
@@ -76,9 +62,5 @@
         align-items: center;
         justify-content: center;
         background: transparent;
-    }
-
-    .masthead--menu-open .masthead-seek, .masthead--menu-open .masthead-menu-trigger {
-        pointer-events: none;
     }
 }
