--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,7 +19,7 @@
         opacity: 0;
         position: absolute;
         left: -25px;
-        top: 100%;
+        top: calc(100% - 5px);
         transform: translateY(-16px);
     }
     &.active::before {
