--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -72,8 +72,9 @@ a {
 }
 
 .text-lg {
-    font-size: 18px;
+    font-size: 16px;
     font-family: "Gerstner Programm FSL";
+    letter-spacing: -0.0125em;
     @media (max-width: 768px) {
         font-size: 15px;
     }
@@ -156,6 +157,10 @@ a {
 
 .space-between {
     justify-content: space-between;
+}
+
+.shrink-0 {
+    flex-shrink: 0;
 }
 
 /* ------------ Gap Styles ------------ */
