--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,7 +5,7 @@
 .footer-mobile-bottom {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    align-items: end;
+    align-items: center;
 }
 
 .footer-mobile--copy {
@@ -13,6 +13,7 @@
     line-height: 1;
 }
 
-.footer-mobile-logo {
-    grid-column: 2;
+.footer-mobile-clarity {
+    grid-column: 3;
+    justify-self: end;
 }
