--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -62,6 +62,12 @@
     }
 }
 
+.paragraph {
+    font-family: "Gerstner Programm FSL";
+    letter-spacing: 0.01em;
+    line-height: 1.43;
+}
+
 body {
     color: #fff;
     font-size: 15px;
