--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -61,6 +61,9 @@ a {
 
 .f-20 {
     font-size: 20px;
+    @media (max-width: 768px) {
+        font-size: 18px;
+    }
 }
 
 .f-500 {
@@ -620,5 +623,18 @@ div.bg-image,
 .m-ml0 {
     @media (max-width: 768px) {
         margin-left: 0;
+    }
+}
+
+
+.m-16 {
+    @media (max-width: 768px) {
+        font-size: 16px;
+    }
+}
+
+.m-18 {
+    @media (max-width: 768px) {
+        font-size: 18px;
     }
 }
