--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -86,6 +86,10 @@
     font-family: "Gerstner Programm FSL";
     letter-spacing: 0.01em;
     line-height: 1.4;
+    @media (max-width: 768px) {
+        font-size: 16px;
+        line-height: 1.2;
+    }
 }
 
 body {
