--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -36,8 +36,6 @@
     font-display: swap;
 }
 
-
-
 .h0 {
     line-height: 1;
     font-size: 42px;
@@ -76,8 +74,8 @@
 
 .paragraph {
     font-family: "Gerstner Programm FSL";
-    letter-spacing: 0.01em;
-    line-height: 1.4;
+    letter-spacing: 1px ;
+    line-height: 1.5;
     @media (max-width: 768px) {
         font-size: 16px;
         line-height: 1.2;
@@ -91,8 +89,8 @@ body {
     background: #000;
     font-family: 'Stempel Garamond LT Pro';
     -webkit-font-smoothing: antialiased;
-    font-smooth: always;
     text-rendering: optimizeLegibility;
+    font-smooth: always;
     ::selection {
         background: #d2fd78;
         color: #000;
